2007-06-16  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: (Gluon::RequestResponseContext class)
	integrated request response manipulations.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) query class
	method. query option of link and frame.

2007-06-14  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/dispatcher.rb: (Gluon::Dispatcher class) class2path
	method.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) rename
	methods. `link_path' -> `link', `frame_path' -> `frame'

2007-06-13  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/builder.rb: some request parameters, `gluon.path_info'
	and `gluon.version'

	* lib/gluon/dispatcher.rb: path_info.

	* lib/gluon/builder.rb: request parameter of `gluon.curr_page'

	* lib/gluon/renderer.rb: (Gluon::ViewRenderer class) `render'
	class method is moved from Gluon::ERBContext class.

	* lib/gluon/renderer.rb: rename from lib/gluon/view.rb

	* lib/gluon/po.rb: ERB evaluation with filename.

2007-06-12  TOKI Yoshinori  <toki@freedom.ne.jp>

	* Rakefile: top level Rakefile.

	* bin/gluon_setup: rename from bin/gluon_setup.rb

2007-06-10  TOKI Yoshinori  <toki@freedom.ne.jp>

	* run/lib/Example.rb, run/view/Example.rhtml: example of gluon.

	* lib/gluon/setup.rb: recursive copy for installation.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) import
	method.

	* lib/gluon/view.rb: (Gluon::ViewRenderer class) view directory
	and view rendering method are collected to one place.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) frame method.

	* lib/gluon/po.rb: (Gluon::PresentationObject class) target
	attribute of link method.

	* test/test_dispatcher.rb: unit test for dispatcher.

	* test/test_action.rb: unit test for action.

	* test/test_po.rb: unit test for presentation object.

	* test/Rakefile, test/run.rb: utilities for unit test.

	* lib/gluon/builder.rb: path expansion: `@?' -> application base
	directory.

	* bin/gluon_setup.rb, lib/gluon/setup.rb: setup tool.