@@ -2,6 +2,7 @@
 
 require 'gluon/action'
 require 'gluon/dispatcher'
+require 'gluon/po'
 require 'gluon/rs'
 require 'rack'
 require 'test/unit'
@@ -89,6 +90,41 @@ module Gluon::Test
 
       assert_equal(1, count)
       assert_equal([ :page_hook_in, :page_start, :page_end, :page_hook_out ], @page.calls)
+    end
+
+    class PageWithActions
+      def initialize
+	@calls = []
+      end
+
+      attr_reader :calls
+
+      def foo_action
+	@calls << :foo_action
+      end
+
+      def bar_action
+	@calls << :bar_action
+      end
+    end
+
+    def test_apply_with_actions
+      params = {
+	'foo()' => nil,
+	'bar' => nil,
+	'foo.bar()' => nil
+      }
+      @env.update(Rack::MockRequest.env_for('http://foo:8080/bar.cgi',
+					    'SCRIPT_NAME' => '/bar.cgi',
+					    'QUERY_STRING' => Gluon::PresentationObject.query(params)))
+      build_page(PageWithActions)
+
+      count = 0
+      @action.apply{
+	count += 1
+	assert_equal([ :foo_action ], @page.calls)
+      }
+      assert_equal(1, count)
     end
   end
 end
